<resources>
    <string name="app_name">Altoque</string>
    <string name="cust_title_generate_post">Crear publicación</string>
    <string name="et_title_post">Título</string>
    <string name="et_dist_post">Distrito</string>
    <string name="et_desc_post">Descripción</string>
    <string name="et_spc_post">Especialidad</string>
    <string name="et_time_post">Horario</string>
    <string name="bt_send_post">Siguiente</string>
    <string name="bt_cancel_post">Cancelar</string>
    <string name="bt_to_create">Crear una publicación</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="profile">Ver perfil</string>
    <string name="primer_nombre">Primer nombre</string>
    <string name="PublicationTitle">Mis Publicaciones</string>
    <string name="backButtonDescription">Button to previous page</string>
    <string name="publicationDescription">Image of Publication</string>
    <string name="deletePublicationButtonDescription">Delete Publication Button</string>
    <string name="editPublicationButtonDescription">editPublicationButton</string>
    <string name="verMasString">VER MÁS</string>
    <string name="publication_time">Publication Time</string>
    <string name="request_location">Request Location</string>
    <string name="publication_title">Publication Title</string>
    <string name="exampleLoremText">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset.</string>
    <string name="publication_image">Publication Image</string>
    <string name="description_title">Description</string>
    <string name="profesionales_que_aceptaron">Profesionales que aceptaron</string>
    <string name="Horario_description">Imagen de horario</string>
    <string name="time_range_string">00:00 - 00:00</string>
    <string name="horarios_disponibles_title">Horarios Disponibles</string>
    <string name="cancelar">Cancelar</string>
    <string name="nombre_completo">Nombre Completo:</string>
    <string name="accept_button_description">Accept Button</string>
    <string name="especialistimagedescription">EspecialistImageDescription</string>
    <string name="numero_telefonico">Número Telefónico:</string>
    <string name="correo_electronico">Correo Electrónico:</string>
    <string name="declinebuttondescription">declineButtonDescription</string>
    <string name="especialidad">Especialidad</string>
    <string name="descripcion">Descripción</string>
    <string name="recomendation_count">500</string>
    <string name="works_count">250</string>
    <string name="recomendaciones_title">Recomendaciones</string>
    <string name="works_count_title">Trabajos hechos</string>
    <string name="rating">Rating</string>
    <string name="contactar">Contactar</string>
    <string name="especialist_image_description">Especialist Image Description</string>
    <string name="bt_list_post">Ver mis publicaciones</string>
    <string name="publicacion">Publicacion</string>
    <string name="in_progess">In Progess</string>
    <string name="estado_de_solicitud">Estado de Solicitud:</string>
    <string name="ubicacion">Ubicacion</string>
    <string name="_08_00_10_00_am">08:00 - 10:00 am</string>
    <string name="_13_00_17_00_pm">13:00 - 17:00 pm</string>
    <string name="horarios_disponibles">Horarios Disponibles</string>
    <string name="aceptar">Aceptar</string>
    <string name="numero_telefonico_51_997_554_415">numero_telefonico_51_997_554_415</string>
    <string name="correo_electronico_jose_pereyra_gmail_com">correo_electronico_jose_pereyra_gmail_com</string>
    <string name="nombre_y_apellido_jose_pereyra">nombre_y_apellido_jose_pereyra</string>
    <string name="solicitado_por">Solicitado por</string>
    <string name="estoy_teniendo_algunos_problemas_con_mi_impresora_y_estoy_un_poco_frustrado_porque_no_logro_resolverlo_por_mi_cuenta_la_impresora_simplemente_se_niega_a_imprimir_y_no_estoy_segura_de_qu_est_causando_el_problema_he_intentado_reiniciarla_varias_veces_y_verificar_si_hay_atascos_de_papel_pero_no_parece_ser_ese_el_caso_adem_s_he_verificado_los_niveles_de_tinta_y_papel_y_todo_parece_estar_bien_en_ese_aspecto">estoy_teniendo_algunos_problemas_con_mi_impresora_y_estoy_un_poco_frustrado_porque_no_logro_resolverlo_por_mi_cuenta_la_impresora_simplemente_se_niega_a_imprimir_y_no_estoy_segura_de_qu_est_causando_el_problema_he_intentado_reiniciarla_varias_veces_y_verificar_si_hay_atascos_de_papel_pero_no_parece_ser_ese_el_caso_adem_s_he_verificado_los_niveles_de_tinta_y_papel_y_todo_parece_estar_bien_en_ese_aspecto</string>
    <string name="descripci_n">Descripción</string>
    <string name="mi_impresora_no_prende_y_esta_conectado_todos_los_cables_necesito_ayuda_urgente">Mi Impresora no prende y esta conectado todos los cables, necesito ayuda urgente</string>
    <string name="lima_san_isidro">Lima, San Isidro</string>
    <string name="hace_20_min_16_04_2024">Hace 20 min - 16/04/2024</string>
    <string name="btSpcMenuProfile">Ver perfil de especialista</string>
    <string name="logout">Logout</string>
    <string name="nombre_y_apellido">Nombre y Apellido</string>
    <string name="email">Email</string>
    <string name="correo_electr_nico">correo electrónico</string>
    <string name="tel_fono_51">Teléfono (+51)</string>
    <string name="_999999999">999999999</string>
    <string name="perfil_de_cliente">Perfil de Cliente</string>
    <string name="a_o_mes_d_a">año/mes/día</string>
    <string name="direcci_n">Dirección</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="edici_n_de_perfil">Edición de Perfil</string>
    <string name="primer_apellido">Primer apellido</string>
    <string name="n_mero_celular_51">Número celular (+51)</string>
    <string name="a_o_mes_dia">año-mes-dia</string>
    <string name="guardar">Guardar</string>
    <string name="rol">Rol</string>
    <string name="cliente">Cliente</string>
    <string name="correo">Correo</string>
    <string name="perfil_de_especialista">Perfil de Especialista</string>
    <string name="experiencia_laboral">Experiencia laboral</string>
    <string name="a_os_meses">Años,Meses</string>
    <string name="precio_de_consulta_s">Precio de consulta (S/.)</string>
    <string name="precio">Precio</string>
    <string name="experiencia_laboral_a_os">Experiencia laboral (Años)</string>
    <string name="precio_de_consulta">Precio de consulta</string>
    <string name="especialista">Especialista</string>
    <string name="create_post_camara_desc">button to take a picture of the customer\'s problem</string>
    <string name="create_post_image_desc">image of customer problem</string>
    <string name="prototype_datetime_date">Día</string>
    <string name="title_datetime">Horarios</string>
    <string name="symbol_add_datetime">+</string>
    <string name="accept_schedule_creation">Aceptar</string>
    <string name="cancel_schedule_creation">Cancelar</string>
    <string name="title_datetime_post_creation">Horario</string>
    <string name="schedule_creation_hint_endtime">Hora de fin</string>
    <string name="schedule_creation_hint_starttime">Hora de inicio</string>
    <string name="prototype_datetime_starttime">Hora de inicio</string>
    <string name="new_schedule_prototype_title">Nuevo horario</string>
    <string name="prototype_datetime_endtime">Hora de fin</string>
    <string name="bt_send_schedules">Publicar</string>
</resources>