<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".publication_detail">

    <ImageButton
        android:id="@+id/ibBackButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/backButtonDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_revert"
        app:tint="#000000" />

    <TextView
        android:id="@+id/tvPublicationDescription"
        android:layout_width="331dp"
        android:layout_height="123dp"
        android:layout_marginTop="192dp"
        android:text="@string/exampleLoremText"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivPublicationImageDetail"
        android:layout_width="115dp"
        android:layout_height="99dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="52dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_dialog"
        android:contentDescription="@string/publication_image" />

    <TextView
        android:id="@+id/tvPublicationTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="93dp"
        android:text="@string/publication_time"
        android:textColor="#FF0000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ivPublicationImageDetail"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRequestLocationAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="88dp"
        android:text="@string/request_location"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tvPublicationTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPublicationDetailTitle"
        app:layout_constraintVertical_bias="0.333" />

    <TextView
        android:id="@+id/tvPublicationDetailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="68dp"
        android:text="@string/publication_title"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDescriptionTitleDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginTop="12dp"
        android:text="@string/description_title"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPublicationImageDetail" />

    <TextView
        android:id="@+id/tvEspecialistAcceptTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="235dp"
        android:text="@string/profesionales_que_aceptaron"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ivHorarioImage"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:layout_marginEnd="204dp"
        android:layout_marginBottom="328dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/btn_dialog"
        android:contentDescription="@string/Horario_description" />

    <TextView
        android:id="@+id/tvRequestLocationTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="336dp"
        android:text="@string/time_range_string"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvRequestLocationTimeToo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="26dp"
        android:text="@string/time_range_string"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tvEspecialistAcceptTitle"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ivHorarioImageAdd"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:layout_marginStart="164dp"
        android:layout_marginBottom="276dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/btn_dialog"
        android:contentDescription="@string/Horario_description" />

    <TextView
        android:id="@+id/tvHorarioTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="380dp"
        android:text="@string/horarios_disponibles_title"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#5A5A5A"
        android:text="@string/cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/ibAcceptButtonAdd"
        android:layout_width="48dp"
        android:layout_height="47dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="164dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/checkbox_on_background"
        android:contentDescription="@string/accept_button_description" />

    <ImageView
        android:id="@+id/ivHorarioImageAddAdd"
        android:layout_width="53dp"
        android:layout_height="58dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="156dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/btn_dialog"
        android:contentDescription="@string/especialistimagedescription" />

    <TextView
        android:id="@+id/tvEspecialistTelephone"
        android:layout_width="108dp"
        android:layout_height="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="92dp"
        android:text="@string/numero_telefonico"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/btCancel"
        app:layout_constraintStart_toEndOf="@+id/ivHorarioImageAddAdd" />

    <TextView
        android:id="@+id/tvEspecialistEmail"
        android:layout_width="108dp"
        android:layout_height="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="4dp"
        android:text="@string/correo_electronico"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/tvEspecialistTelephone"
        app:layout_constraintStart_toEndOf="@+id/ivHorarioImageAddAdd" />

    <TextView
        android:id="@+id/tvEspecialistFullName"
        android:layout_width="108dp"
        android:layout_height="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="4dp"
        android:text="@string/nombre_completo"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/tvEspecialistEmail"
        app:layout_constraintStart_toEndOf="@+id/ivHorarioImageAddAdd" />

    <ImageButton
        android:id="@+id/ibDeclineButtonAdd"
        android:layout_width="55dp"
        android:layout_height="47dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="164dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_delete"
        android:contentDescription="@string/declinebuttondescription" />

</androidx.constraintlayout.widget.ConstraintLayout>