<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IU.PublicationList">

    <TextView
        android:id="@+id/tvPublicationTitle"
        android:layout_width="201dp"
        android:layout_height="37dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="290dp"
        android:layout_marginBottom="689dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/PublicationTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/ibBackButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/backButtonDescription"
        app:layout_constraintEnd_toStartOf="@+id/tvPublicationTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_revert"
        app:tint="#000000" />

    <ImageView
        android:id="@+id/ivPublicationImage"
        android:layout_width="98dp"
        android:layout_height="98dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="104dp"
        android:contentDescription="@string/publicationDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_dialog"
        tools:srcCompat="@android:drawable/btn_dialog" />
    
    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:backgroundTint="#AEE6E6E6"
        android:contentDescription="@string/deletePublicationButtonDescription"
        app:layout_constraintEnd_toStartOf="@+id/imageButton3"
        app:layout_constraintStart_toEndOf="@+id/tvRequestLocationAdd"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_delete"
        app:tint="#000000" />
    
    <Button
        android:id="@+id/btVerMas"
        android:layout_width="98dp"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="#FF5555"
        android:padding="0dp"
        android:text="@string/verMasString"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPublicationTime" />
    
    <TextView
        android:id="@+id/tvPublicationTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="140dp"
        android:text="@string/publication_time"
        android:textColor="#FF0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRequestLocationAdd" />

    <TextView
        android:id="@+id/tvRequestLocationAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="137dp"
        android:text="@string/request_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPublicationDetailTitle" />

    <TextView
        android:id="@+id/tvPublicationDetailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="145dp"
        android:text="@string/publication_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPublicationTitle" />
    
    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:backgroundTint="#E4EAE8E8"
        android:contentDescription="@string/editPublicationButtonDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_edit"
        app:tint="#000000" />

</androidx.constraintlayout.widget.ConstraintLayout>